refactor: Migrate Java 8 to Java 11
Co-authored-by: Moderne <team@moderne.io>